--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,66 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #f4f7f6;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+.card {
+    background-color: #FFF;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.card h1 {
+    background-color: #287d3c;
+    color: white;
+    border-radius: 5px 5px 0 0;
+    padding: .5em;
+    margin: 0 0 0 0;
+}
+
+.card p {
+    font-size: 1.2em;
+    padding: .5em;
+    margin: 10px 0;
+}
+
+.card input {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 50%;
+    height: 100%;
+    padding: 1.5em;
+}
+
+.card button {
+    width: 50%;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+.card button:hover {
+    background-color: #218838;
+}
+
+.input-group {
+    display: flex;
+    gap: 10px;
+    height: 5em;
+    padding: 0 1em 1em 1em;
 }
